--- a/careerbytecode/src/CSS/section4.css
+++ b/careerbytecode/src/CSS/section4.css
@@ -1,3 +1,7 @@
 .section4-primary{
     background: linear-gradient( #3B82F6, #8B5CF6);
 }
+
+.backgroundcolor{
+background: linear-gradient( #8B5CF6,#3B82F6);
+}
